# translate-lector

./: README.md  SPECIFICATION.md  package-lock.json  package.json  vitest.config.ts
docs/qa/: test-plan-04-wire-paragraph-packing.md  test-plan-06-serialize-prefetch-cancel-stale.md  test-plan-13-local-inference-timeout.md  test-plan-autopilot-fix-wkwebview-pdf-text-extraction.md
docs/specs/: decision-brief-grilling-03.md  decision-brief-latency-03.md  decision-brief-llamacpp-direct-03.md  decision-brief-local-llm-04.md  decision-brief-stc-05.md  design-provider-abstraction.md  direct-page-navigation.md  glossary-not-updating-diagnosis.md  llamacpp-direct-wayfinder.md  local-llm-empty-content-diagnosis.md  local-llm-provider-wayfinder.md  local-prefetch-cancellation-diagnosis.md  local-translation-latency-diagnosis.md  local-translation-latency-wayfinder.md  manual-glossary-entry-wayfinder.md  ocr-layout-translation-wayfinder.md  openrouter-404-routing-diagnosis.md  pdfjs-wkwebview-text-extraction-diagnosis.md  prefetched-page-arrival-latency-diagnosis.md  research-openrouter-contract.md  research-unsloth-serving.md  small-context-translation-wayfinder.md  stale-page-translation-diagnosis.md  translate-lector-wayfinder.md  unit-truncation-diagnosis.md
docs/tickets/direct-page-navigation/: 01-task-direct-page-selector.md
docs/tickets/glossary-not-updating/done/: 01-advance-context-on-prefetch-warmed-cache-hit.md  02-surface-perceptor-update-failures.md
docs/tickets/llamacpp-direct/: 01-research-binary-sourcing.md  02-research-tauri-sidecar-contract.md  03-grilling-llamacpp-direct-decisions.md  04-task-sidecar-lifecycle.md  05-task-model-management.md  06-task-unsloth-cleanup-docs.md  07-hitl-quality-validation.md  10-sidecar-process-wrap-lifetime.md
docs/tickets/llamacpp-direct/done/: 01-research-binary-sourcing.md  02-research-tauri-sidecar-contract.md  03-grilling-llamacpp-direct-decisions.md  04-task-sidecar-lifecycle.md  05-task-model-management.md  06-task-unsloth-cleanup-docs.md  07-hitl-quality-validation.md  08-readiness-wait-for-model-loaded.md  09-provider-aware-server-messaging.md
docs/tickets/local-llm-empty-content/: 03-handle-length-finish-empty-content.md
docs/tickets/local-llm-provider/: 03-prototype-perceptor-contract-local.md  05-core-client-configurable-base-url.md  06-provider-scoped-keychain.md  08-settings-ui-provider-selector.md  10-e2e-validation-and-defaults-tuning.md  11-fix-ec03-message-provider-neutral.md  12-retry-translate-button.md  13-local-inference-timeout.md
docs/tickets/local-translation-latency/: 04-wire-paragraph-packing.md  06-serialize-prefetch-cancel-stale.md
docs/tickets/ocr-layout-translation/: 01-research-tesseract-integration.md  02-prototype-layout-fidelity.md  03-prototype-reconstruction-rendering.md  04-grilling-product-decisions.md  05-research-structured-translation-contract.md
docs/tickets/pdfjs-wkwebview-text-extraction-diagnosis/: 02-validate-tauri-macos-pdf-flow.md  03-decide-branch-prerequisite-guardrail-owner.md  04-implement-branch-prerequisite-guardrail.md
docs/tickets/small-context-translation/: 01-research-token-budget-model.md  03-prototype-deterministic-glossary-selection.md  07-nctx-per-provider-config.md
prototypes/local-llm/: validate-perceptor-contract.mjs
prototypes/pdfjs/: extract.mjs  generate-fixtures.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  documents.rs  glossary.rs  lib.rs  llm.rs  main.rs  secrets.rs  settings.rs  sidecar.rs  translate.rs
src/lib/: GlossaryPanel.svelte  ProviderConfig.svelte  glossary.test.ts  glossary.ts  pageRouteContract.test.ts  pdfDocumentLoad.test.ts  pdfDocumentLoad.ts  pdfExtract.test.ts  pdfExtract.ts  pdfPageText.test.ts  pdfPageText.ts  pdfRender.test.ts  pdfRender.ts  pdfTextStream.test.ts  pdfTextStream.ts  providerConfig.test.ts  providerConfig.ts  session.test.ts  session.ts  settings.test.ts  settings.ts  translation.test.ts  translation.ts
src/routes/: +page.svelte
(+51 files in other folders)
